# rusty_bot

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: abilityinfo.rs  common.rs  depre_embedbuilder.rs  mod.rs
src/commands/abilityinfo/: embedbuilder.rs
