[package]
authors = ["Polyhistorian <root@csyxy.fi>"]
categories = ["command-line-utilities", "games"]
description = "Rust implementation of my Pyt<wh>orstBot, meaning a bot to fetch ability info from the overwatch wiki"
edition = "2018"
keywords = ["discord", "bot", "overwatch"]
license = "MIT"
name = "rusty_bot"
repository = "https://github.com/Polyhistorian/rusty_bot/"
readme = "README.md"
publish = false
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
heck = "0.4.0"
serde_json = "1.0.85"
json = "0.12.4"
regex = "1.6.0"

[dependencies.reqwest]
version = "0.11.11"
features = ["blocking"]

[dependencies.tokio]
version = "1.23.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
features = ["framework", "standard_framework"]
